quickstart/config-sync/manifests/new_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-disallowed-pod-test
  namespace: hello
spec:
  containers:
  - image: nginx
    name: nginx
    resources:
      limits:
        cpu: 100m
        memory: 30Mi
