quickstart/config-sync/manifests/test_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-example_new
spec:
  containers:
  - env:
    - name: MY_PASSWORD
      valueFrom:
        secretKeyRef:
          key: password
          name: mysecret
    image: redis
    name: test
