quickstart/config-sync/manifests/test_pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testpolicynew
spec:
  containers:
  - name: mycontainer
    image: redis
  restartPolicy: Never
