quickstart/config-sync/manifests/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sValidImageRepos
metadata:
  name: allowed-repo-gcr
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Deployment"]
    namespaces:
      - "default"
  parameters:
    repos:
      - "gcr"
